修复无法点击的BUG
