# packages/api/src/services/DefaultService.ts
@@ -27,16 +27,28 @@ export class DefaultService {
        */
       password: string;
     };
-  }): CancelablePromise<{
-    /**
-     * 登陆令牌
-     */
-    token: string;
-    /**
-     * 用户信息
-     */
-    userInfo: UserInfo;
-  }> {
+  }): CancelablePromise<
+    | {
+        /**
+         * 登陆令牌
+         */
+        token: string;
+        /**
+         * 用户信息
+         */
+        userInfo: UserInfo;
+      }
+    | {
+        /**
+         * 错误编码
+         */
+        code: number;
+        /**
+         * 错误描述
+         */
+        msg: string;
+      }
+  > {
     return this.httpRequest.request({
       method: "POST",
       url: "/login",
